name:              Monaba
version:           1.1.7
cabal-version:     >= 1.8
build-type:        Simple

Flag dev
    Description:   Turn on development settings, like auto-reload templates.
    Default:       False

Flag library-only
    Description:   Build for use with "yesod devel"
    Default:       False

library
    exposed-modules: Application
                     Foundation
                     Import
                     Model
                     ModelTypes
                     Settings
                     Settings.StaticFiles
                     Settings.Development
                     Handler.Home
                     Handler.Help
                     Handler.Thread
                     Handler.Board
                     Handler.Edit
                     Handler.Recent
                     Handler.Posting
                     Handler.Delete
                     Handler.Admin
                     Handler.Admin.Ban
                     Handler.Admin.Hellban
                     Handler.Admin.Board
                     Handler.Admin.Config
                     Handler.Admin.Group
                     Handler.Admin.User
                     Handler.Admin.Search
                     Handler.Admin.Modlog
                     Handler.Api
                     Handler.Captcha
                     Handler.Settings
                     Handler.EventSource
                     Utils.YobaMarkup
                     Utils.SillyCaptcha
                     Utils.Image

    if flag(dev) || flag(library-only)
        cpp-options:   -DDEVELOPMENT
        ghc-options:   -Wall -O0
    else
        ghc-options:   -Wall -O1

    extensions: TemplateHaskell
                QuasiQuotes
                OverloadedStrings
                NoImplicitPrelude
                CPP
                MultiParamTypeClasses
                TypeFamilies
                GADTs
                GeneralizedNewtypeDeriving
                FlexibleContexts
                EmptyDataDecls
                NoMonomorphismRestriction
                DeriveDataTypeable
                ViewPatterns

    build-depends: base                          >= 4          && < 5
                 , yesod                         >= 1.4.0      && < 1.5
                 , yesod-core                    >= 1.4.0      && < 1.5
                 , yesod-auth                    >= 1.4.0      && < 1.5
                 , yesod-static                  >= 1.4.0      && < 1.5
                 , yesod-form                    >= 1.4.0      && < 1.5
                 , bytestring                    >= 0.9        && < 0.11
                 , text                          >= 0.11       && < 2.0
                 , persistent                    >= 2.1        && < 2.2
                 , persistent-postgresql         >= 2.1        && < 2.2
                 , persistent-template           >= 2.1        && < 2.2
                 , template-haskell
                 , shakespeare                   >= 2.0        && < 2.1
                 , hjsmin                        >= 0.1        && < 0.2
                 , monad-control                 >= 0.3        && < 0.4
                 , wai-extra                     >= 3.0        && < 3.1
                 , yaml                          >= 0.8        && < 0.9
                 , http-conduit                  >= 2.1        && < 2.2
                 , directory                     >= 1.1        && < 1.3
                 , warp                          >= 3.0        && < 3.1
                 , data-default
                 , aeson                         >= 0.6        && < 0.9
                 , conduit                       >= 1.0        && < 2.0
                 , monad-logger                  >= 0.3        && < 0.4
                 , fast-logger                   >= 2.2        && < 2.3
                 , wai-logger                    >= 2.2        && < 2.3

                 , yesod-auth-hashdb
                 , time                          
                 , filepath                      
                 , wai                           
                 , unix-time                     
                 , unix                          
                 , nano-md5                      
                 , process                       
                 , imagemagick
                 , blaze-markup
                 , old-locale  
                 , blaze-html  
                 , MissingH    
                 , utf8-string
                 , array      
                 , split      
                 , random     
                 , esqueleto  
                 , containers                    
                 , http-types                    
                 , yesod-routes                  
                 , hs-GeoIP                      
                 , tagsoup                       
                 , parsec                        
                 , yesod-eventsource
                 , wai-eventsource
                 , blaze-builder
                 , base64-bytestring
                 , resourcet
                 , stm
                 , system-filepath
                 , transformers

executable         Monaba
    if flag(library-only)
        Buildable: False

    main-is:           main.hs
    hs-source-dirs:    app
    build-depends:     base
                     , Monaba
                     , yesod


    ghc-options:       -threaded -O1

test-suite test
    type:              exitcode-stdio-1.0
    main-is:           main.hs
    hs-source-dirs:    tests
    ghc-options:       -Wall

    build-depends: base
                 , Monaba
                 , yesod-test >= 1.2 && < 1.3
                 , yesod-core
                 , yesod
                 , persistent
                 , persistent-postgresql
                 , resourcet
                 , monad-logger
                 , transformers
                 , hspec
