name:              Monaba
version:           2.4.3
cabal-version:     >= 1.8
build-type:        Simple

Flag dev
    Description:   Turn on development settings, like auto-reload templates.
    Default:       False

Flag library-only
    Description:   Build for use with "yesod devel"
    Default:       False

library
    hs-source-dirs: ., app
    exposed-modules: Application
                     Foundation
                     Import
                     Import.NoFoundation
                     Model
                     ModelTypes
                     Settings
                     Settings.StaticFiles
                     Handler.Common
                     Handler.Home
                     Handler.Help
                     Handler.Thread
                     Handler.Board
                     Handler.Edit
                     Handler.Feed
                     Handler.Posting
                     Handler.Delete
                     Handler.EventSource
                     Handler.Admin
                     Handler.Admin.Ban
                     Handler.Admin.Hellban
                     Handler.Admin.Board
                     Handler.Admin.Config
                     Handler.Admin.Group
                     Handler.Admin.User
                     Handler.Admin.Modlog
                     Handler.Admin.Search
                     Handler.Ajax
                     Handler.Settings
                     Handler.Captcha
                     Utils.File
                     Utils.YobaMarkup

    if flag(dev) || flag(library-only)
        cpp-options:   -DDEVELOPMENT
        ghc-options:   -Wall -fwarn-tabs -O0
    else
        ghc-options:   -Wall -fwarn-tabs -O2

    extensions: TemplateHaskell
                QuasiQuotes
                OverloadedStrings
                NoImplicitPrelude
                CPP
                MultiParamTypeClasses
                TypeFamilies
                GADTs
                GeneralizedNewtypeDeriving
                FlexibleContexts
                EmptyDataDecls
                NoMonomorphismRestriction
                DeriveDataTypeable
                ViewPatterns
                TupleSections
                RecordWildCards
                ExistentialQuantification

    build-depends: base                          >= 4          && < 5
                 , yesod                         >= 1.4.1      && < 1.5
                 , yesod-core                    >= 1.4.6      && < 1.5
                 , yesod-auth                    >= 1.4.0      && < 1.5
                 , yesod-static                  >= 1.4.0.3    && < 1.6
                 , yesod-form                    >= 1.4.0      && < 1.5
                 , classy-prelude                >= 0.10.2
                 , classy-prelude-conduit        >= 0.10.2
                 , classy-prelude-yesod          >= 0.10.2
                 , bytestring                    >= 0.9        && < 0.11
                 , text                          >= 0.11       && < 2.0
                 , persistent                    >= 2.0        && < 2.3
                 , persistent-postgresql         >= 2.1.1      && < 2.3
                 , persistent-template           >= 2.0        && < 2.3
                 , template-haskell
                 , shakespeare                   >= 2.0        && < 2.1
                 , hjsmin                        >= 0.1        && < 0.2
                 , monad-control                 >= 0.3        && < 1.1
                 , wai-extra                     >= 3.0        && < 3.1
                 , yaml                          >= 0.8        && < 0.9
                 , http-conduit                  >= 2.1        && < 2.2
                 , directory                     >= 1.1        && < 1.3
                 , warp                          >= 3.0        && < 3.2
                 , data-default
                 , aeson                         >= 0.6        && < 0.10
                 , conduit                       >= 1.0        && < 2.0
                 , monad-logger                  >= 0.3        && < 0.4
                 , fast-logger                   >= 2.2        && < 2.5
                 , wai-logger                    >= 2.2        && < 2.3
                 , file-embed
                 , safe
                 , unordered-containers
                 , containers
                 , vector
                 , time
                 , filepath                      
                 , wai                           
                 , unix-time                     
                 , unix                          
                 , nano-md5                      
                 , process                       
                 , system-filepath
                 , blaze-markup                  
                 , old-locale                    
                 , persistent                    
                 , yesod-persistent              
                 , blaze-html                    
                 , MissingH                      
                 , utf8-string                   
                 , array                         
                 , split                         
                 , esqueleto                     
                 , containers                    
                 , http-types                    
                 , yesod-routes                  
                 , hs-GeoIP                      
                 , tagsoup                       
                 , parsec                        
                 , yesod-auth-hashdb
                 , random
                 , imagemagick
                 , resourcet
                 , yesod-eventsource
                 , stm
                 , blaze-builder
                 , base64-bytestring
                 , mtl


executable         Monaba
    if flag(library-only)
        Buildable: False

    main-is:           main.hs
    hs-source-dirs:    app
    build-depends:     base, Monaba

    ghc-options:       -threaded -O2 -rtsopts -with-rtsopts=-N

executable         Captcha
    if flag(library-only)
        Buildable: False

    main-is:           PlainCaptcha.hs
    hs-source-dirs:    Utils
    build-depends:     base
    ghc-options:       -threaded -O2 -rtsopts -with-rtsopts=-N
    build-depends: random
                 , imagemagick
                 , system-filepath
                 , text
                 , transformers

test-suite test
    type:              exitcode-stdio-1.0
    main-is:           Spec.hs
    hs-source-dirs:    test
    ghc-options:       -Wall

    extensions: TemplateHaskell
                QuasiQuotes
                OverloadedStrings
                NoImplicitPrelude
                CPP
                MultiParamTypeClasses
                TypeFamilies
                GADTs
                GeneralizedNewtypeDeriving
                FlexibleContexts
                EmptyDataDecls
                NoMonomorphismRestriction
                DeriveDataTypeable
                ViewPatterns
                TupleSections

    build-depends: base
                 , Monaba
                 , yesod-test >= 1.4.3 && < 1.5
                 , yesod-core
                 , yesod
                 , persistent
                 , persistent-postgresql
                 , resourcet
                 , monad-logger
                 , shakespeare
                 , transformers
                 , hspec >= 2.0.0
                 , classy-prelude
                 , classy-prelude-yesod
